[package]
name = "servo-controller"
version = "0.1.0"
edition = "2024"
authors = ["NotPunchnox"]
description = "A Rust library for controlling ST3215 servos"
license = "MIT"

[dependencies]
serialport = "4.3"
thiserror = "2.0.17"

[build-dependencies]
cbindgen = "0.29.2"

[lib]
name = "st3215"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[example]]
name = "basic"
path = "examples/basic.rs"