[package]
name = "sts3215-controller"
version = "0.1.1"
authors = ["NotPunchnox"]
description = "A Rust library for controlling ST3215 servos"
license = "MIT"
repository = "https://github.com/Cogni-Robot/servo-controller"
homepage = "https://github.com/Cogni-Robot/servo-controller"
readme = "README.md"
keywords = ["servo", "robotics", "sts3215", "feetech", "embedded"]
categories = ["embedded", "hardware-support"]

[dependencies]
serialport = "4.3"
thiserror = "2.0.17"

[build-dependencies]
cbindgen = "0.29.2"

[lib]
name = "st3215"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[example]]
name = "basic"
path = "examples/basic.rs"
